feat(ui): Add Conditional Comments Link (#10)
adds a "comments" link to the
  entry meta actions. The link will only be rendered if a CommentsURL is present in  the entry's data

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/10
Co-authored-by: eleith
Co-committed-by: eleith

--- a/internal/templates/entries.gohtml
+++ b/internal/templates/entries.gohtml
@@ -199,6 +199,12 @@
 						<a href="{{.URL}}" target="_blank" rel="noopener noreferrer"
 							class="entry-link" data-link-external>permalink</a>
 					</div>
+					{{if .CommentsURL}}
+					<div class="entry-meta-tab">
+						<a href="{{.CommentsURL}}" target="_blank" rel="noopener noreferrer"
+							class="entry-link" data-link-comments>comments</a>
+					</div>
+					{{end}}
 					<div class="entry-meta-tab">
 						<a href="/feed/{{.FeedID}}/entry/{{.ID}}" target="_blank"
 							rel="noopener noreferrer" class="entry-link"
