--- a/internal/templates/entries.gohtml
+++ b/internal/templates/entries.gohtml
@@ -108,7 +108,7 @@
 		.entry-content {
 			font-size: 1rem;
 			color: #4b5563;
-			margin-top: 0.75rem;
+			padding: 1rem;
 			overflow-wrap: break-word;
 		}
 
