break text so it wraps

--- a/internal/templates/entries.gohtml
+++ b/internal/templates/entries.gohtml
@@ -201,7 +201,7 @@
 			font-size: 1rem;
 			color: var(--entry-content-text-color);
 			padding: 1rem;
-			overflow-wrap: break-word;
+			overflow-wrap: anywhere;
 		}
 
 		.entry-content img {
